2010-03-10  Chris Fleizach  <cfleizach@apple.com>

        Skipping test on GTK and WIN. No Review.

        VoiceOver can navigate to hidden content in widget (WAI-ARIA)
        https://bugs.webkit.org/show_bug.cgi?id=35986

        Thought this test might pass on the other platforms, but no.

        * platform/gtk/Skipped:
        * platform/win/Skipped:

2010-03-10  Chris Fleizach  <cfleizach@apple.com>

        Reviewed by Beth Dakin.

        VoiceOver can navigate to hidden content in widget (WAI-ARIA)
        https://bugs.webkit.org/show_bug.cgi?id=35986

        * accessibility/aria-hidden-with-elements-expected.txt: Added.
        * accessibility/aria-hidden-with-elements.html: Added.

2010-03-10  Dmitry Titov  <dimich@chromium.org>

        Reviewed by Darin Adler.

        Make Document::postTask to use a single queue of tasks, to fire them in order
        https://bugs.webkit.org/show_bug.cgi?id=35943

        Updated the test since the order of events coming from independent task sources has changed.
        This is a behavior change, but is consistent with the spec (which specifically says these events may be fired
        in any order) and the last version of FF (3.5.8) which was completing the test successfully.

        * http/tests/appcache/top-frame-2-expected.txt:
        * http/tests/appcache/top-frame-2.html:

2010-03-10  Antonio Gomes  <tonikitoo@webkit.org>

        The test was introduced in r55796, it has been failing in Gtk bots since then.

        Filed bug https://bugs.webkit.org/show_bug.cgi?id=35984.

        * platform/gtk/Skipped: fast/events/spatial-navigation/snav-iframe-with-offscreen-focusable-element.html skipped until fix.

2010-03-10  Robert Hogan  <robert@webkit.org>

        Reviewed by Simon Hausmann.

        [Qt] Add Support for WebKitEnableCaretBrowsing to Qt DRT

        Unskip test fast/events/multiline-link-arrow-navigation.html

        https://bugs.webkit.org/show_bug.cgi?id=35593

        * platform/qt/Skipped:
